# libmodbus-static

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  fronius-meter-sunspec-layout.h  modbus-tcp-linux-client.cpp  modbus-tcp-linux-server.cpp
include/: common.h  modbus-actor.h  modbus-client.h  modbus-register.h  modbus-server.h  tcp-server.h
src/: common.cpp
test/: CMakeLists.txt  continuous_test.sh  main.cpp
